fix border radius on small links and white background

--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
 }
 
-
 :root {
   --text-color: white;
   --bg-url: url(./assets/bg-mobile.jpg);
@@ -170,7 +169,7 @@ ul li a:hover {
 }
 
 #social-links a:hover {
-  background: var(--hightlight-color);
+  background: var(--highlight-color);
 }
 
 footer {
@@ -188,6 +187,6 @@ footer {
   }
 
   .light {
-    --bg-url: url(.assets/bg-desktop-light.jpg)
+    --bg-url: url(./assets/bg-desktop-light.jpg)
   }
 }
